tests/NormalTests/paczka1/small_fuzzy/65825624.err
Error in line 6: S754 S754 27,66
Error in line 1: S754 A183 57,7
Error in line 14: AQuUoaapRl A641 39,5
Error in line 13: S754 S754 67,3
